--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/react": "^2.5.5",
+    "@choc-ui/chakra-autocomplete": "^5.2.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.17",
@@ -22,6 +23,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-nanny": "^2.15.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
